gcc/testsuite/rust/rustc/ui/parser/issues/issue-105209_dg.rs
//@ compile-flags: -Zunpretty=ast-tree
#![c={#![c[)x   // { dg-error "" "" { target *-*-* } }
                // { dg-error "" "" { target *-*-* } }

